--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,30 @@ body {
     padding: 10px;
     margin: 20px;
 }
+.joinButton {
+    margin-left: 25%;
+    padding: 30px;
+    font-size: 50px;
+    width: 50%;
+    border: 4px solid black;
+    background-color: dodgerblue;
+}
+.choicePicture {
+    width: 250px;
+    height: 250px;
+}
+.option {
+    margin: 80px 20px;
+    padding: 5px;
+}
+.chatbox {
+    width: 100%;
+    padding: 30px;
+    background-color: white;
+}
+.chatInput {
+    width: 80%;
+}
+.chatInputButton {
+    width: 20%;
+}
